--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="description"
+        content="Empresa de informatica especializada en impresoras y tecnologia. Cursos online, repuestos e insumos.">
+    <meta name="keywords" content="imformatica, cursos, insumos, repuestos, impresora">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./resources/image/iconos/icono-navegador.ico">
     <title>Inicio | Printek Informatica</title>
@@ -53,20 +56,20 @@
         <img src="./resources/image/index/banner-blanco.jpg"
             alt="Banner con una impresora epson negra y texto: sevicio tecnico especializado">
         <h1>Nuestros Servicios</h1>
-        <div class="grid-index">
-            <div class="seccion2">
+        <div class="main-index__grid">
+            <div class="main-index__seccion2">
                 <a href="./sections/cursos.html"> <img src="./resources/image/index/impresora-curso.webp"
                         alt="Impresora epson negra"> </a>
                 <h3>Cursos Online</h3>
                 <p>Cursos prácticos de reparación de impresoras chorro de tinta y láser.</p>
             </div>
-            <div class="seccion1">
+            <div class="main-index__seccion1">
                 <a href="./sections/productos.html"> <img src="./resources/image/index/impresora-producto.webp"
                         alt="Impresora epson negra y blanca"> </a>
                 <h3>Repuestos</h3>
                 <p>Productos calidad premiun para tu impresora</p>
             </div>
-            <div class="seccion3">
+            <div class="main-index__seccion3">
                 <a href="./sections/contacto.html"> <img src="./resources/image/index/impresora-servicio-tecnico.jpg"
                         alt="Impresora hp negra">
                 </a>
