--- a/sections/productos.html
+++ b/sections/productos.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="description" content="Repuestos e insumos para impresoras de todas las marcas.">
+    <meta name="keywords" content="insumos, repuestos, impresora, catuchos, tonner">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../resources/image/iconos/icono-navegador.ico">
     <title>Productos | Printek Informatica</title>
