--- a/sections/quienes-somos.html
+++ b/sections/quienes-somos.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="description"
+        content="Empresa de informatica especializada en impresoras y tecnologia. Cursos online, repuestos e insumos.">
+    <meta name="keywords" content="imformatica, cursos, insumos, repuestos, impresora">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../resources/image/iconos/icono-navegador.ico">
     <title>Nosotros | Printek Informatica</title>
