--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -18,13 +18,13 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../resources/image/iconos/logo.png" alt="Logo" width="130">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="../resources/image/iconos/logo.png" alt="Logo" width="150">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="header-iconohamburguesa"><img src="../resources/image/iconos/menu.png" alt="Icono de menu hamburguesa"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -32,13 +32,15 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./quienes-somos.html">Nosotros</a>
+                            <a class="nav-link active" aria-current="page"
+                                href=".quienes-somos.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./cursos.html">Cursos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
+                            <a class="nav-link active" aria-current="page"
+                                href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
