--- a/sections/quienes-somos.html
+++ b/sections/quienes-somos.html
@@ -25,7 +25,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="header-iconohamburguesa"><img src="../resources/image/iconos/menu.png" alt="Icono de menu hamburguesa"></span>
+                    <span class="header-iconohamburguesa"><img src="../resources/image/iconos/menu.png"
+                            alt="Icono de menu hamburguesa"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -48,6 +49,7 @@
                 </div>
             </div>
         </nav>
+    </header>
     </header>
 
     <main>
